--- a/style.css
+++ b/style.css
@@ -4,38 +4,52 @@
 }
 
 :root{
---color1: #f1ab4e ;
---color2: #f4c06a ;
---color3: #f8d585 ;
---color4: #fbeaa1 ;
---color5: #ffffbc ;
+--color1: #000706  ;
+--color2: #00272d ;
+--color3: #0a3636  ;
+--color4: #0c7e7e ;
+--color5: #bfac8b ;
 --color6: #e42355;
 --color7: #49fecf;
 }
 
 body{
-    /* width: 100vw;
-    height: 500px;
-    background: linear-gradient(180deg, blue, black); */
+
+    /* height: 560px;
+    border: 2px solid yellow; */
     display: flex;
     align-items: center;
     justify-content: center;
     
 }
-.game-board{
+
+#campo {
     margin-top: 20px;
-    background: linear-gradient(180deg, var(--color1), var(--color5));
-    width: 90%;
+    display: flex;
+    flex-direction: column; 
+    border: 5px solid black;
+    width: 90vw;
+    height: 600px;
+    background: linear-gradient(180deg, var(--color2), var(--color4));
+} 
+
+.game-board{
+    margin-top: 100px;
+    background: transparent; 
+    width: 100%;
     height: 500px;
-    border: 2px solid var(--color1);
+    border-top: 2px solid var(--color1);
     position: relative;
     overflow: hidden;
+    align-self: flex-end;
     
 }
 
+ 
+
 .boneco{
     border: 2px solid white; 
-    /* background-color: var(--color7); */
+    background-color: transparent;
     width: 50px;
     height: 50px;
     position: absolute;
@@ -47,20 +61,20 @@ body{
 
 .obstaculo{
     border: 2px solid white;
-    background-color: var(--color6); 
+    background-color: var(--color1); 
     width: 50px;
     height: 50px;
     position: absolute;
     bottom: 0;
     right: 0;
     border-radius: 8px;
-    box-shadow:0px 0px 10px var(--color6), 0px 0px 25px var(--color6) inset;
+    box-shadow:0px 0px 10px var(--color1), 0px 0px 25px var(--color1) inset;
     
     
 }
 
 .buttons{
-    position:relative;
+    position:absolute;
     border: 2px solid black;
     width: 30%;
     height: 60px;
@@ -70,6 +84,8 @@ body{
     position: fixed;
     align-items: center;
     right: 35%;
+    align-self: flex-start;
+
 }
 
 .start{
