--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ body{
 }
 
 .buttons{
+    margin-top: 2px;
     position:absolute;
     border: 2px solid black;
     width: 30%;
@@ -85,30 +86,39 @@ body{
     align-items: center;
     right: 35%;
     align-self: flex-start;
-
+    border-radius: 5px;
+    background: linear-gradient(90deg, var(--color1), var(--color2), var(--color1));
 }
 
 .start{
     width: 70px;
     height: 50%;
-    border: 2px solid green;
-    background-color: greenyellow;
+    border: 2px solid var(--color4);
+    background: linear-gradient(90deg, var(--color1), var(--color4));
+    color: var(--color5);
     border-radius: 10px;
     transition: 0.3s linear;
 }
 
 .start:hover{
- box-shadow: 0px 0px 15px green;
+ box-shadow: 0px 0px 15px var(--color4);
  transform: scale(1.2) ;
 }
 
 .reset{
     width: 70px;
     height: 50%;
-    border: 2px solid rgb(236, 25, 25);
-    background-color: rgb(244, 85, 45);
+    border: 2px solid var(--color4);
+    background: linear-gradient(240deg, var(--color1), var(--color4));
+    color: var(--color5);
     border-radius: 10px;
+    transition: 0.3s linear;
 }
+
+.reset:hover{
+    box-shadow: 0px 0px 15px var(--color4);
+    transform: scale(1.2) ;
+   }
 
 .jump{
     animation: boneco-jump 600ms   ease-in-out;
